Update shaded code